// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@graphql-box/debug-manager >> CacheManager >> CACHE_ENTRY_ADDED >> correct data emitted 1`] = `
Array [
  Object {
    "labels": Object {
      "awaitDataCaching": true,
      "cacheControl": "public, max-age=5",
      "cacheType": "queryResponses",
      "duration": 0,
      "endTime": 0,
      "environment": "client",
      "hasDeferOrStream": false,
      "logGroup": 4,
      "logOrder": 10,
      "operation": "query",
      "path": "/",
      "protocol": "http:",
      "queryFiltered": false,
      "requestHash": "ea1cbc58eca798225b53f59d95ffb23a",
      "requestID": "123456789",
      "startTime": 0,
      "typeIDKey": "id",
      "url": "http://localhost/",
      "userAgent": "Mozilla/5.0 (darwin) AppleWebKit/537.36 (KHTML, like Gecko) jsdom/15.2.1",
      "value": Object {
        "cacheMetadata": Object {
          "query": Object {
            "cacheControl": Object {
              "maxAge": 5,
              "public": true,
            },
            "etag": undefined,
            "ttl": 297475205000,
          },
          "query.organization": Object {
            "cacheControl": Object {
              "maxAge": 5,
              "public": true,
            },
            "etag": undefined,
            "ttl": 297475205000,
          },
        },
        "data": Object {
          "organization": Object {
            "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
            "email": "",
            "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
            "login": "facebook",
            "name": "Facebook",
            "url": "https://github.com/facebook",
          },
        },
      },
    },
    "log": Object {
      "level": "INFO",
      "logger": "CLIENT",
    },
    "message": "cache_entry_added",
  },
  Object {
    "labels": Object {
      "awaitDataCaching": true,
      "cacheControl": "public, max-age=5",
      "cacheType": "requestFieldPaths",
      "decryptedCacheKey": "organization({\\"login\\":\\"facebook\\"})",
      "duration": 0,
      "endTime": 0,
      "environment": "client",
      "hasDeferOrStream": false,
      "logGroup": 4,
      "logOrder": 10,
      "operation": "query",
      "path": "/",
      "protocol": "http:",
      "queryFiltered": false,
      "requestHash": "5256db516a2438a7e5488a00413f4809",
      "requestID": "123456789",
      "startTime": 0,
      "typeIDKey": "id",
      "url": "http://localhost/",
      "userAgent": "Mozilla/5.0 (darwin) AppleWebKit/537.36 (KHTML, like Gecko) jsdom/15.2.1",
      "value": Object {
        "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
        "email": "",
        "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
        "login": "facebook",
        "name": "Facebook",
        "url": "https://github.com/facebook",
      },
    },
    "log": Object {
      "level": "INFO",
      "logger": "CLIENT",
    },
    "message": "cache_entry_added",
  },
  Object {
    "labels": Object {
      "awaitDataCaching": true,
      "cacheControl": "public, max-age=5",
      "cacheType": "dataEntities",
      "duration": 0,
      "endTime": 0,
      "environment": "client",
      "hasDeferOrStream": false,
      "logGroup": 4,
      "logOrder": 10,
      "operation": "query",
      "path": "/",
      "protocol": "http:",
      "queryFiltered": false,
      "requestHash": "Organization::MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      "requestID": "123456789",
      "startTime": 0,
      "typeIDKey": "id",
      "url": "http://localhost/",
      "userAgent": "Mozilla/5.0 (darwin) AppleWebKit/537.36 (KHTML, like Gecko) jsdom/15.2.1",
      "value": Object {
        "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
        "email": "",
        "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
        "login": "facebook",
        "name": "Facebook",
        "url": "https://github.com/facebook",
      },
    },
    "log": Object {
      "level": "INFO",
      "logger": "CLIENT",
    },
    "message": "cache_entry_added",
  },
]
`;

exports[`@graphql-box/debug-manager >> CacheManager >> CACHE_ENTRY_QUERIED >> correct data emitted 1`] = `
Array [
  Object {
    "labels": Object {
      "awaitDataCaching": true,
      "cacheType": "requestFieldPaths",
      "decryptedCacheKey": "organization({\\"login\\":\\"facebook\\"})",
      "duration": 0,
      "endTime": 0,
      "environment": "client",
      "hasDeferOrStream": false,
      "logGroup": 2,
      "logOrder": 4,
      "operation": "query",
      "path": "/",
      "protocol": "http:",
      "queryFiltered": false,
      "requestHash": "5256db516a2438a7e5488a00413f4809",
      "requestID": "123456789",
      "result": Object {
        "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
        "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
        "login": "facebook",
      },
      "startTime": 0,
      "typeIDKey": "id",
      "url": "http://localhost/",
      "userAgent": "Mozilla/5.0 (darwin) AppleWebKit/537.36 (KHTML, like Gecko) jsdom/15.2.1",
    },
    "log": Object {
      "level": "INFO",
      "logger": "CLIENT",
    },
    "message": "cache_entry_queried",
  },
  Object {
    "labels": Object {
      "awaitDataCaching": true,
      "cacheType": "dataEntities",
      "duration": 0,
      "endTime": 0,
      "environment": "client",
      "hasDeferOrStream": false,
      "logGroup": 2,
      "logOrder": 4,
      "operation": "query",
      "path": "/",
      "protocol": "http:",
      "queryFiltered": false,
      "requestHash": "Organization::MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      "requestID": "123456789",
      "result": Object {
        "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
        "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
        "login": "facebook",
      },
      "startTime": 0,
      "typeIDKey": "id",
      "url": "http://localhost/",
      "userAgent": "Mozilla/5.0 (darwin) AppleWebKit/537.36 (KHTML, like Gecko) jsdom/15.2.1",
    },
    "log": Object {
      "level": "INFO",
      "logger": "CLIENT",
    },
    "message": "cache_entry_queried",
  },
]
`;
